--- a/package.json
+++ b/package.json
@@ -6,11 +6,12 @@
   "homepage": "https://nick-brick.github.io/store-react/",
   "scripts": {
     "dev": "vite",
+    "deploy": "gh-pages -d build",
+    "predeploy": "npm run build",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview",
-    "deploy": "gh-pages -d build",
-    "predeploy": "npm run build"
+    "preview": "vite preview"
+    
   },
   "dependencies": {
     "react": "^18.2.0",
